# ent/entc.go
@@ -4,7 +4,7 @@
 package main
 
 import (
-	"log"
+	"encoding/json"
 
 	"ariga.io/ogent"
 	"entgo.io/contrib/entgql"
@@ -13,7 +13,32 @@ import (
 	"entgo.io/ent/entc"
 	"entgo.io/ent/entc/gen"
 	"github.com/ogen-go/ogen"
+	"go.uber.org/zap"
 )
+
+func additionalEndpoints(graph *gen.Graph, spec *ogen.Spec) error {
+	spec.AddSchema("HealthCheckResult", ogen.NewSchema().
+		SetDescription("Result of health check").
+		AddRequiredProperties(
+			ogen.NewProperty().SetName("status").SetSchema(ogen.String().SetEnum([]json.RawMessage{json.RawMessage(`"ok"`), json.RawMessage(`"error"`)})),
+			ogen.NewProperty().SetName("uptime").SetSchema(ogen.String()),
+		).
+		AddOptionalProperties(
+			ogen.NewProperty().SetName("errors").SetSchema(ogen.NewSchema()),
+		),
+	)
+	spec.AddPathItem("/healthz", ogen.NewPathItem().
+		SetDescription("Health Checking for API services").
+		SetGet(ogen.NewOperation().SetOperationID("healthCheck").
+			SetSummary("Health Checking").
+			SetDescription("Health Checking for API services").
+			AddResponse("200", ogen.NewResponse().AddContent("application/json", ogen.NewSchema().SetRef("#/components/schemas/HealthCheckResult"))).
+			AddResponse("503", ogen.NewResponse().AddContent("application/json", ogen.NewSchema().SetRef("#/components/schemas/HealthCheckResult"))).
+			AddResponse("500", ogen.NewResponse().SetRef("#/components/responses/500")),
+		),
+	)
+	return nil
+}
 
 func main() {
 	entgqlext, err := entgql.NewExtension(
@@ -22,11 +47,11 @@ func main() {
 		entgql.WithConfigPath("gqlgen.yml"),
 	)
 	if err != nil {
-		log.Fatalf("creating entgql extension: %v", err)
+		zap.S().Fatalf("creating entgql extension: %v", err)
 	}
 	protoext, err := entproto.NewExtension()
 	if err != nil {
-		log.Fatalf("creating entproto extension: %v", err)
+		zap.S().Fatalf("creating entproto extension: %v", err)
 	}
 	spec := ogen.NewSpec().
 		SetOpenAPI("3.0.3").
@@ -36,13 +61,16 @@ func main() {
 				SetVersion("1.0").
 				SetDescription("This is a API for running Judy Judge."),
 		)
-	entoasext, err := entoas.NewExtension(entoas.Spec(spec))
+	entoasext, err := entoas.NewExtension(
+		entoas.Spec(spec),
+		entoas.Mutations(additionalEndpoints),
+	)
 	if err != nil {
-		log.Fatalf("creating enoas extension: %v", err)
+		zap.S().Fatalf("creating enoas extension: %v", err)
 	}
 	ogentext, err := ogent.NewExtension(spec)
 	if err != nil {
-		log.Fatalf("creating ogent extension: %v", err)
+		zap.S().Fatalf("creating ogent extension: %v", err)
 	}
 	err = entc.Generate("./schema", &gen.Config{}, entc.Extensions(
 		entgqlext,
@@ -51,6 +79,6 @@ func main() {
 		entoasext,
 	))
 	if err != nil {
-		log.Fatalf("running ent codegen: %v", err)
+		zap.S().Fatalf("running ent codegen: %v", err)
 	}
 }
