# healthz/controller.go
@@ -1,9 +1,9 @@
 package healthz
 
 import (
-	"net/http"
+	"context"
 
-	"github.com/gin-gonic/gin"
+	"github.com/syoi-org/judy/ent/ogent"
 )
 
 type Controller struct {
@@ -14,31 +14,13 @@ func NewController(service *Service) *Controller {
 	return &Controller{service}
 }
 
-// healthCheck godoc
-//
-//	@Summary		Health Checking
-//	@Description	Health Checking for API services
-//	@Produce		json
-//	@Success		200	{object}	Result
-//	@Failure		503	{object}	Result
-//	@Router			/healthz [get]
-func (hc *Controller) healthCheck(ctx *gin.Context) {
+func (hc *Controller) HealthCheck(ctx context.Context) (ogent.HealthCheckRes, error) {
 	result, err := hc.Service.HealthCheck(ctx)
 	if err != nil {
-		ctx.AbortWithStatus(http.StatusInternalServerError)
-		return
+		return nil, err
 	}
-	if result.Status == "ok" {
-		ctx.JSON(http.StatusOK, result)
-	} else {
-		ctx.JSON(http.StatusServiceUnavailable, result)
+	if result.Status == ogent.HealthCheckResultStatusError {
+		return (*ogent.HealthCheckServiceUnavailable)(result), nil
 	}
-}
-
-func (hc *Controller) RoutePattern() string {
-	return "/healthz"
-}
-
-func (hc *Controller) RegisterControllerRoutes(rg *gin.RouterGroup) {
-	rg.GET("", hc.healthCheck)
+	return (*ogent.HealthCheckOK)(result), nil
 }
