# healthz/service.go
@@ -3,29 +3,9 @@ package healthz
 import (
 	"context"
 	"time"
+
+	"github.com/syoi-org/judy/ent/ogent"
 )
-
-type ResultStatus string
-
-var (
-	StatusOK    ResultStatus = "ok"
-	StatusError ResultStatus = "error"
-)
-
-type Result struct {
-	Status  string        `json:"status" example:"ok" enums:"ok,error"`
-	Uptime  string        `json:"uptime"`
-	Details ResultDetails `json:"details"`
-}
-
-type ResultDetails struct {
-	Db ResultDetail `json:"db"`
-}
-
-type ResultDetail struct {
-	Status ResultStatus `json:"status" example:"ok" enums:"ok,error"`
-	Error  string       `json:"error,omitempty"`
-}
 
 type Service struct {
 	startupTimestamp time.Time
@@ -37,14 +17,9 @@ func NewService() *Service {
 	}
 }
 
-func (hs *Service) HealthCheck(ctx context.Context) (*Result, error) {
-	return &Result{
-		Status: "ok",
+func (hs *Service) HealthCheck(ctx context.Context) (*ogent.HealthCheckResult, error) {
+	return &ogent.HealthCheckResult{
+		Status: ogent.HealthCheckResultStatusOk,
 		Uptime: time.Since(hs.startupTimestamp).String(),
-		Details: ResultDetails{
-			Db: ResultDetail{
-				Status: "ok",
-			},
-		},
 	}, nil
 }
